Adding of docker support

--- a/TertiarySchoolNavigator.Api/TertiarySchoolNavigator.Api.csproj
+++ b/TertiarySchoolNavigator.Api/TertiarySchoolNavigator.Api.csproj
@@ -5,9 +5,12 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <UserSecretsId>370d8622-74dc-4cfb-901f-0d2627ab5be3</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
