--- a/TertiarySchoolNavigator.Api/appsettings.json
+++ b/TertiarySchoolNavigator.Api/appsettings.json
@@ -3,6 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ConnectionStrings": {
+      "sqlConnection": "Server=db;Database=TertiarySchoolDB;Integrated Security=true;TrustServerCertificate=true;"
     }
   },
   "AllowedHosts": "*"
