--- a/TertiarySchoolNavigator.Api/appsettings.json
+++ b/TertiarySchoolNavigator.Api/appsettings.json
@@ -6,6 +6,12 @@
     },
     "ConnectionStrings": {
       "sqlConnection": "Server=db;Database=TertiarySchoolDB;Integrated Security=true;TrustServerCertificate=true;"
+    },
+
+    "JWTSettings": {
+      "audience": "",
+      "secretKey": "ThisIsALongerSecretKeyThatIsUsedForSigningJWTs",
+      "validIssuer": "Authentication API"
     }
   },
   "AllowedHosts": "*"
