Adding dokcer migration

--- a/TertiarySchoolNavigator.Api/appsettings.json
+++ b/TertiarySchoolNavigator.Api/appsettings.json
@@ -3,10 +3,15 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "ConnectionStrings": {
-      "sqlConnection": "Server=db;Database=TertiarySchoolDB;Integrated Security=true;TrustServerCertificate=true;"
     }
+  },
+  "ConnectionStrings": {
+    "sqlConnection": "Server=localhost,1433;Database=TertiarySchoolDB;User Id=sa;Password=clifford;"
+  },
+  "JWTSettings": {
+    "audience": "",
+    "secretKey": "ThisIsALongerSecretKeyThatIsUsedForSigningJWTs",
+    "validIssuer": "Authentication API"
   },
   "AllowedHosts": "*"
 }
