--- a/TertiarySchoolNavigator.Api/docker-compose.yml
+++ b/TertiarySchoolNavigator.Api/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     environment:
       SA_PASSWORD: "clifford"
       ACCEPT_EULA: "Y"
+    ports:
+      - "1433:1433"
     volumes:
       - dbdata:/var/opt/mssql
 volumes:
