--- a/TertiarySchoolNavigator.Api/appsettings.json
+++ b/TertiarySchoolNavigator.Api/appsettings.json
@@ -6,8 +6,10 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Server=localhost,1433;Database=TertiarySchoolDB;User Id=sa;Password=clifford;"
+    "sqlConnection": "Server=localhost;Database=TertiarySchoolNavDB;  Integrated Security=true;  TrustServerCertificate=true;"
+
   },
+
   "JWTSettings": {
     "audience": "",
     "secretKey": "ThisIsALongerSecretKeyThatIsUsedForSigningJWTs",
