--- a/TertiarySchoolNavigator.Api/TertiarySchoolNavigator.Api.csproj
+++ b/TertiarySchoolNavigator.Api/TertiarySchoolNavigator.Api.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
    
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+   
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
    
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
